--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -32,8 +32,9 @@
   margin-top: 8px;
 }
 
-#nav-bar:hover .toggle {
-  background-color: steelblue;
-  color: blanchedalmond;
-  /* color: blanchedalmond; */
+#nav-bar .toggle:hover {
+  background-color: rgb(214, 241, 255);
+  color: rgb(0, 187, 125);
+  border-bottom: 3px solid;
+  border-bottom-color: rgb(0, 182, 82);
 }
